--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,7 +125,7 @@ dependencies {
     // Make AutoValue annotation visible to the compiler.
     provided libraries.autoValue
     apt libraries.autoGson
-    apt libraries.gson
+    compile libraries.gson
 
     compile libraries.supportAnnotations
     compile libraries.supportAppCompat
@@ -175,5 +175,6 @@ configurations.all {
     resolutionStrategy {
         // Force our version of support-annotations, we have a conflict between app and androidTest dependency resolution.
         force libraries.supportAnnotations
+        force libraries.gson
     }
 }
